# src/models/req/ReqBuddy.ts
@@ -1,0 +1,5 @@
+export interface ReqBuddy{
+    buddy_group_name?: string,
+    buddies: number[]
+
+}
