# src/models/res/ResBuddy.ts
@@ -1,0 +1,8 @@
+import { ResEmployee } from "./ResEmployee";
+
+export interface ResBuddy{
+    id?: number,
+    buddy_group_name?: string,
+    employees?: ResEmployee[]
+
+}
